@@ -42,9 +42,9 @@ local other =
 }
 if EHI:IsLootCounterVisible() then
     other[102293] = EHI:AddLootCounter3(function(self, ...)
-        if self._cache.CreateCounter then
-            EHI:ShowLootCounterNoChecks()
-            self._cache.CreateCounter = false
+        if not self._cache.CreateCounter then
+            EHI:ShowLootCounterNoCheck({})
+            self._cache.CreateCounter = true
         end
         self._trackers:IncreaseLootCounterProgressMax()
     end)
